Fix issues with missing borders on va-text-input and off screen text on va-text-area

--- a/packages/web-components/src/mixins/uswds-error-border.scss
+++ b/packages/web-components/src/mixins/uswds-error-border.scss
@@ -33,7 +33,7 @@
     }
 }
 
-@media screen and (max-width: $desktop) {
+@media screen and (max-width: ($desktop - 1px)) {
     :host([error]:not([error=''])[use-forms-pattern='multiple']), :host(.va-form-group--error[use-forms-pattern='multiple']) {
         padding-left: 0;
     }
